feat: learn webpack

--- a/基础巩固/react/hooks/1.useState.md
+++ b/基础巩固/react/hooks/1.useState.md
@@ -1,28 +1,42 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World</title>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<!-- 
 
-    <!-- Don't use this in production: -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="text/babel">
-      import {useState} from 'react'
-      console.log('=>', useState)
-    
-      function MyApp() {
-        return <h1>Hello, world!1111222333</h1>;
-      }
+let currentStateArr = []
+let _index = 0
 
-      const container = document.getElementById('root');
-      const root = ReactDOM.createRoot(container);
-      root.render(<MyApp />);
+export default function useMyState(initialVal) {
+    // if (!currentStateArr[_index]) {
+    //     currentStateArr.push({
+    //         state: typeof state === 'function' ? state() : state,
+    //     })
+    // }
+    currentStateArr[_index] = currentStateArr[_index] || initialVal
 
-    </script>
-  </body>
-</html>
+    const cursor = _index
+    function dispatchAction(newVal) {
+        currentStateArr[cursor] = typeof newVal === 'function' ? newVal(currentStateArr[cursor]) : newVal
+        _index = 0
+        window.render()
+    }
+
+    // const dispatchAction = (() => {
+    //     const index = _index
+    //     return newState => {
+    //         console.log('=>index', index)
+    //         console.log('=>_index', _index)
+    //         console.log('=>newState', newState)
+    //         console.log('=>currentStateArr[index].state', currentStateArr[index].state)
+    //         currentStateArr[index].state =
+    //             typeof newState === 'function' ? newState(currentStateArr[index].state) : newState
+    //         _index = 0
+    //         window.render()
+    //     }
+    // })()
+
+    console.log('=>currentStateArr', currentStateArr)
+    // console.log('=>_index', _index)
+    return [currentStateArr[_index++], dispatchAction]
+    // const matchState = currentStateArr[_index++]
+    // return [matchState.state, dispatchAction]
+}
+
+ -->
