--- a/基础巩固/输入url回车后发生了什么/1.浏览器.md
+++ b/基础巩固/输入url回车后发生了什么/1.浏览器.md
@@ -4,27 +4,29 @@
 输入url点击回车后，由浏览器主进程接管
 浏览器
  - 浏览器进程
-   - 主进程: 管理其他进程，控制用户输入，加载渲染页面
-   - 网络进程： 处理网络请求和数据传输，下载资源，和服务器通信
+   - 主进程: 创建，协调，销毁进程，用户和窗口的交互等
+   - 网络进程： 处理网络请求，处理dns解析，建立和维护tcp链接，处理安全性和身份验证
    - GPU图形处理进程： 浏览器界面UI的绘制
    - 插件进程: 对浏览器插件统一管理
-   - 浏览器渲染进程 (renderer) / 浏览器内核 每个tab页都有一个独立的渲染进程
+   - 浏览器渲染进程 (renderer) 每个tab页都有一个独立的渲染进程
      - GUI线程：解析html生成dom树，解析css文件形成css树，合并dom树和css树形成render树并交给CPU进程来进行页面的绘制
-     - js引擎线程：处理js代码逻辑，维护微任务队列micro task
-       - js中分为两种任务类型：宏任务和微任务
-        - 宏任务： 主线程任务，setTimeout，setInterval，
-        - 微任务： process.nextTick比promise.then要先执行， promise.then .catch .finally
+     - js引擎线程：处理js代码逻辑，维护微任务队列 microTask queue
+       - js分为同步任务和异步任务
+       - 异步任务又分为宏任务和微任务
+        - 宏任务： setTimeout，setInterval，用户操作后的回调函数，网络请求ajax，fatch，requestAnimationFrame
+        - 微任务： process.nextTick比promise.then要先执行， promise.then .catch .finally MutationObserver()-监听dom
        - js中的事件执行机制 event loop
-         - 事件执行开始
-         - 从<script></script>中按顺序执行同步代码
-         - 
-         - 遇到微任务，就将微任务推到microTask队列
-         - 
+         - 执行栈中同步任务按顺序依次执行 (变量声明，函数调用，计算操作)
+         - 遇到宏任务将其推入事件触发线程中的事件队列
+         - 遇到微任务将其推入微任务队列
+         - 执行栈中同步任务执行完，将微任务队列中的微任务依次执行，微任务执行过程产生的微任务会添加到本次队列的末尾，等到微任务队列全部执行完
+         - js引擎被挂起，交由GUI线程去渲染页面
+         - 页面渲染完毕，把宏任务队列的回调函数取出，开启下一轮事件循环，执行完毕，取下一个宏任务，重复事件循环
      - 定时器线程
      - 事件触发线程：维护事件队列
      - 异步http请求线程
      
-
+- 
 
 
 
